--- a/html&css/webdev-Colt/07/styles.css
+++ b/html&css/webdev-Colt/07/styles.css
@@ -1,6 +1,12 @@
 body {
     width: 1024px;
     margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-weight: 400;
 }
 
 article a {
