--- a/html&css/webdev-Colt/08/styles.css
+++ b/html&css/webdev-Colt/08/styles.css
@@ -1,59 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    width: 1024px;
-    margin: auto;
-}
-
-h1 {
-    text-align: center;
-    padding: 2rem;
-    font-size: 4rem;
-}
-h2, h3, h4, h5, h6 {
-    width: fit-content;
-    background-color: #f1f1f1;
-    padding: 0.2em 0;
-    padding-right: 0.2em;
-    padding-left: 1em;
-    border-left: 2px solid black;
-    border-top-right-radius: 0.2em;
-    border-bottom-right-radius: 0.2em;
-}
-h2 {
-    font-size: 1.5rem;
-}
-h3 {
-    font-size: 1.3rem;
-}
-h4 {
-    font-size: 1rem;
-}
-
-article a {
-    color: grey;
-    text-decoration: none;
-}
-article a:hover {
-    font-size: 102%;
-    color: black;
-    text-decoration: underline;
-}
-section {
-    margin-top: 5em;
-}
-section p {
-    background-color: #f1f1f1;
-    padding: 0.5em;
-    border: 1px solid black;
-    border-left: 4px solid black;
-    border-radius: 0.2em;
-}
-
-div {
-    background-color: lightgrey;
-    border-left: 4px solid black;
-}
-div li {
-    background-color: #f1f1f1 ;
-    padding: 0.5em;
+    margin: 0 auto;
+    width: 80%;
+    font-family: 'Roboto', sans-serif;
 }
