--- a/html&css/webdev-Colt/docStyles.css
+++ b/html&css/webdev-Colt/docStyles.css
@@ -88,7 +88,6 @@ main
 }
 #developer img:hover
 {
-	border-left: 0.5em solid rgb(2, 62, 140);
 	border-top-right-radius: 100%;
 	border-bottom-right-radius: 100%;
 }
@@ -111,8 +110,21 @@ main
 }
 #devKnowledge
 {
+	font-size: 0.8em;
 	padding-top: 1em;
 	text-transform: uppercase;
+}
+.devKnowledge
+{
+	padding: 0.1em 0.3em;
+	border-radius: 0.2em;
+	background-color: rgb(2, 62, 140, .2);
+}
+.devKnowledge:hover
+{
+	display: inline-block;
+	box-shadow: 0 0.5em 0.5em -0.4em rgb(2, 62, 140);
+	transform: translateY(-0.3em);
 }
 
 #notes
@@ -152,13 +164,14 @@ main
 	background-color: rgb(2, 62, 140, .2);
 	border-radius: 0.2em;
 	padding: 0.1em 0.1em;
-	transition: color 0.25s, background-color 0.25s, padding 0.25s;
+	transition: font-size 0.25s, color 0.25s, background-color 0.25s, padding 0.25s;
 }
 .highlight:hover
 {
+	font-size: 1.1em;
 	color: rgb(255, 255, 255);
 	background-color: rgb(2, 62, 140, 1);
-	padding: 0.3em 0.1em;
+	padding: 0.2em 0.2em;
 }
 
 .important
@@ -166,13 +179,14 @@ main
 	background-color: rgba(140, 2, 2, .2);
 	border-radius: 0.2em;
 	padding: 0.1em 0.1em;
-	transition: color 0.25s, background-color 0.25s, padding 0.25s;
+	transition: font-size 0.25s, color 0.25s, background-color 0.25s, padding 0.25s;
 }
 .important:hover
 {
+	font-size: 1.1em;
 	color: rgb(255, 255, 255);
 	background-color: rgba(140, 2, 2, 1);
-	padding: 0.3em 0.1em;
+	padding: 0.2em 0.2em;
 }
 
 footer
