--- a/html&css/webdev-Colt/tic-tac.css
+++ b/html&css/webdev-Colt/tic-tac.css
@@ -1,57 +1,86 @@
 body
 {
-    margin: 0 auto;
-    background-color: rgb(240, 240, 240);
+  margin: 0 auto;
+/*   background-color: rgb(45, 48, 71); */
+/*   background-color: rgb(255, 48, 71); */
+    background-color: hsla(65, 80%, 70%, 1);
+  font-family: 'Open Sans', sans-serif;
 }
 
 header
 {
-    display: flex;
+  display: flex;
 }
-h1
+header h1
 {
-    margin-bottom: 50px;
-    padding-bottom: 50px;
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: rgb(0, 0, 0, .5);
+  font-weight: 700;
+  letter-spacing: 0.1em;
 }
 
 main
 {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: calc(100vh - 2px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-table
+#mytables
 {
-    transform: rotate(45deg);
-}
-
-.verticle
-{
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-}
-
-.horizontal
-{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+  border-right: 2px solid rgb(0, 0, 0, .5);
+  border-bottom: 6px solid rgb(0, 0, 0, .5);
+  border-left: 2px solid rgb(0, 0, 0, .5);
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  padding: 3em 5em;
+  box-shadow: 0 0.7em 0.7em -0.4em rgb(0, 0, 0, .5);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
 }
 
 td
 {
-    width: 100px;
-    height: 100px;
-    transition: background-color 1s;
+  width: 50px;
+  height: 50px;
+  color: rgb(0, 0, 0, .0);
+  text-align: center;
+  font-size: 2.3em;
+  transition: color 0.5s ease-out, background-color 0.5s ease-out;
 }
-td:hover 
+td:hover
 {
-    background-color: crimson;
+  background-color: rgb(0, 0, 0, .5);
+  cursor: pointer;
+}
+
+#ver1
+{
+  margin-right: 50px;
+}
+#ver2
+{
+  transform: rotate(45deg);
+}
+
+.vertical
+{
+  border-left: 1px solid rgb(0, 0, 0, .5);
+  border-right: 1px solid rgb(0, 0, 0, .5);
+}
+
+.horizontal
+{
+  border-top: 1px solid rgb(0, 0, 0, .5);
+  border-bottom: 1px solid rgb(0, 0, 0, .5);
 }
