--- a/html&css/docStyles.css
+++ b/html&css/docStyles.css
@@ -44,8 +44,7 @@ header h1 {
 	animation: animate 10s linear infinite;
 	text-align: center;
 	font-size: 3em;
-	font-weight: 100;
-	color: hsla(0, 0%, 0%, .5);
+	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 0.4em;
 }
@@ -53,8 +52,11 @@ header h1 {
 	0% {
 		background-position: 0%;
 	}
-	100% {
+	50% {
 		background-position: 100%;
+	}
+	100% {
+		background-position: 0%;
 	}
 }
 
@@ -77,23 +79,36 @@ main {
 	margin: 0;
 	padding: 1em 2em;
 	font-size: 1em;
-	color: hsla(0, 0%, 0%, .5);
+	color: hsl(0, 0%, 0%);
 	border-top: 1px solid hsla(0, 0%, 0%, .2);
 	border-bottom: 1px solid hsla(0, 0%, 0%, .2);
 	box-shadow: 0 0.5em 0.5em -0.4em hsla(0, 0%, 0%, .2);
 }
 #toc ul {
-	color: hsla(0, 0%, 0%, .5);
+	color: hsl(0, 0%, 0%);
 	list-style-type: square;
 }
 
 #toc a {
 	font-size: 1rem;
-	color: hsla(0, 0%, 0%, .5);
+	color: hsl(0, 0%, 0%);
 	text-decoration: none;
 }
 #toc a:hover {
 	text-decoration: underline;
+}
+
+#developer img {
+	width: 100px;
+	margin: 1em 0 1em 1em;
+	border: 3px solid hsl(235, 90%,70%);
+	border-radius: 50%;
+	transition: border-left 0.1s, border-top-right-radius 0.25s, border-bottom-right-radius 0.25s;
+}
+#developer img:hover {
+	border-top-right-radius: 100%;
+	border-bottom-right-radius: 100%;
+	cursor: pointer;
 }
 
 #devInfo {
@@ -102,17 +117,6 @@ main {
 	justify-content: flex-start;
 	flex-wrap: wrap;
 	align-items: center;
-}
-#developer img {
-	width: 100px;
-	margin: 1em 0 1em 1em;
-	border: 3px solid hsla(0, 0%, 0%, .2);
-	border-radius: 50%;
-	transition: border-left 0.1s, border-top-right-radius 0.25s, border-bottom-right-radius 0.25s;
-}
-#developer img:hover {
-	border-top-right-radius: 100%;
-	border-bottom-right-radius: 100%;
 }
 
 #devInfo ul {
@@ -136,31 +140,27 @@ main {
 }
 .lang {
 	padding: 0.1em 0.3em;
-	border: 1px solid hsla(0, 0%, 0%, .2);
 	border-radius: 0.2em;
-	background-color: hsla(0, 0%, 0%, .2);
+	color: hsl(0, 0%, 100%);
+	background-color: hsla(235,  90%, 70%);
 	transition: box-shadow 0.25s, transform 0.25s;
 }
 .lang:hover {
 	display: inline-block;
 	box-shadow: 0 0.5em 0.5em -0.4em hsla(0, 0%, 0%, .2);
 	transform: translateY(-0.2em);
+	cursor: pointer;
 }
 
 #notes {
 	flex-basis: 70%;
-}
-#notes h2 {
-	font-size: 1.5em;
-	padding: 0.1em 0;
-	border-bottom: 1px solid hsla(0, 0%, 0%, .1);
 }
 #notes article {
 	margin-bottom: 2em;
 	border-top: 1px solid hsla(0, 0%, 0%, .2);
 	border-bottom: 1px solid hsla(0, 0%, 0%, .2);
 	padding: 1em 2em;
-	color: hsla(0, 0%, 0%, .5);
+	color: hsla(0, 0%,0%);
 	box-shadow: 0 0.5em 0.5em -0.4em hsla(0, 0%, 0%, .2);
 	transition: background-color 0.25s, boxshadow 0.25s, transform 0.25s;
 }
@@ -168,37 +168,98 @@ main {
 	background-color: hsl(0, 0%, 98%);
 	transform: translateY(-0.5em);
 }
+#notes h2 {
+	font-size: 1.5em;
+	padding: 0.2em 0;
+	border-bottom: 1px solid hsla(0, 0%, 0%, .1);
+}
+#notes h3 {
+	margin: 0;
+	padding: 2em 0 0.5em 0;
+}
+#notes h3::before {
+	content:"\279C";
+	padding-right: 0.2em;
+	background-size: 400%;
+	background-image: linear-gradient(
+		90deg,
+		hsl(0, 90%, 70%),
+		hsl(45, 90%, 70%),
+		hsl(90, 90%, 70%),
+		hsl(135, 90%, 70%),
+		hsl(180, 90%, 70%),
+		hsl(225, 90%, 70%),
+		hsl(270, 90%, 70%),
+		hsl(315, 90%, 70%),
+		hsl(360, 90%, 70%),
+		hsl(315, 90%, 70%),
+		hsl(270, 90%, 70%),
+		hsl(225, 90%, 70%),
+		hsl(180, 90%, 70%),
+		hsl(135, 90%, 70%),
+		hsl(90, 90%, 70%),
+		hsl(45, 90%, 70%),
+		hsl(0, 90%, 70%)
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	animation: animate 10s linear infinite;
+	font-size: 1.2em;
+}
+#notes h3::after {
+	content:"\2970";
+	padding-right: 0.2em;
+	background-size: 400%;
+	background-image: linear-gradient(
+		90deg,
+		hsl(0, 90%, 70%),
+		hsl(45, 90%, 70%),
+		hsl(90, 90%, 70%),
+		hsl(135, 90%, 70%),
+		hsl(180, 90%, 70%),
+		hsl(225, 90%, 70%),
+		hsl(270, 90%, 70%),
+		hsl(315, 90%, 70%),
+		hsl(360, 90%, 70%),
+		hsl(315, 90%, 70%),
+		hsl(270, 90%, 70%),
+		hsl(225, 90%, 70%),
+		hsl(180, 90%, 70%),
+		hsl(135, 90%, 70%),
+		hsl(90, 90%, 70%),
+		hsl(45, 90%, 70%),
+		hsl(0, 90%, 70%)
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	animation: animate 10s linear infinite;
+	font-size: 1.2em;
+}
+
+#notes .example {
+	margin-top: 1em;
+	border-radius: 0.5em;
+	padding: 0.5em 0;
+	background-color: hsl(235, 90%, 70%);
+	color: hsl(0, 0%, 100%);
+}
 #notes p {
-	padding-left: 1em;
+	margin-top: 1.5em;
+	padding: 0 1em;
 	text-align: justify;
 	font-size: 1em;
 	line-height: 1.5em;
+	color: black;
 }
 
 .highlight {
-	background-color: hsla(0, 0%, 0%, .1);
-	border-radius: 0.2em;
-	padding: 0.1em 0.1em;
-	transition: font-size 0.25s, color 0.25s, background-color 0.25s, padding 0.25s;
-}
-.highlight:hover {
-	font-size: 1.1em;
-	color: rgb(255, 255, 255);
-	background-color: hsla(0, 0%, 0%, .5);
-	padding: 0.2em 0.2em;
+	color: hsl(235, 90%, 70%);
+	font-weight: 700;
 }
 
 .important {
-	background-color: rgba(140, 2, 2, .2);
-	border-radius: 0.2em;
-	padding: 0.1em 0.1em;
-	transition: font-size 0.25s, color 0.25s, background-color 0.25s, padding 0.25s;
-}
-.important:hover {
-	font-size: 1.1em;
-	color: rgb(255, 255, 255);
-	background-color: rgba(140, 2, 2, 1);
-	padding: 0.2em 0.2em;
+	color: hsl(0, 90%, 70%);
+	font-weight: 700;
 }
 
 footer {
