--- a/html&css/docStyles.css
+++ b/html&css/docStyles.css
@@ -1,8 +1,16 @@
+html {
+	font-family: 'Open Sans', sans-serif;
+}
+::selection {
+	color: hsl(10, 82%, 64%);
+	background-color: hsl(10, 82%, 64%, .2);
+}
+
 body {
 	margin: 0 auto;
-	font-family: 'Open Sans', sans-serif;
 	background-color: hsl(0, 0%, 95%);
 }
+
 
 header {
 	margin: 2em auto 5em;
@@ -22,24 +30,19 @@ header h1 {
 	margin: 0.2em 0;
 	background-size: 400%;
 	background-image: linear-gradient(
-		90deg,
-		hsl(0, 90%, 70%),
-		hsl(45, 90%, 70%),
-		hsl(90, 90%, 70%),
-		hsl(135, 90%, 70%),
-		hsl(180, 90%, 70%),
-		hsl(225, 90%, 70%),
-		hsl(270, 90%, 70%),
-		hsl(315, 90%, 70%),
-		hsl(360, 90%, 70%),
-		hsl(315, 90%, 70%),
-		hsl(270, 90%, 70%),
-		hsl(225, 90%, 70%),
-		hsl(180, 90%, 70%),
-		hsl(135, 90%, 70%),
-		hsl(90, 90%, 70%),
-		hsl(45, 90%, 70%),
-		hsl(0, 90%, 70%)
+		145deg,
+		hsl(10, 82%, 64%),
+		hsl(5, 78%, 61%),
+		hsl(1, 77%, 58%),
+		hsl(335, 74%, 56%),
+		hsl(351, 73%, 53%),
+		hsl(345, 71%, 51%),
+		hsl(340, 70%, 48%),
+		hsl(335, 68%, 45%),
+		hsl(331, 66%, 43%),
+		hsl(315, 61%, 35%),
+		hsl(311, 59%, 32%),
+		hsl(306, 57%, 30%)
 	);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
@@ -65,44 +68,6 @@ header nav {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-.btn {
-	position: relative;
-	border: 1px solid hsl(235, 90%, 70%);
-	border-radius: 0.5em;
-	padding: 0.5em 1.5em;
-	color: hsl(235, 90%, 70%);
-	text-decoration: none;
-	transition: color 0.25s ease-in-out, 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
-	overflow: hidden;
-}
-.btn:hover, .btn:focus {
-	color: hsl(0, 0%, 100%);
-	transform: translateY(-0.2em);
-	box-shadow: 0 0.5em 0.5em -0.4em hsla(0, 0%, 0%, .2);
-}
-.btn:active {
-	transform: translateY(-0.1em);
-	box-shadow: 0 0.3em 0.3em -0.1em hsla(0, 0%, 0%, .2);
-}
-.btn::before {
-	content: "";
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	border-radius: 0 0 50% 50%;
-	background-color: hsl(235, 90%, 70%);
-	top: 0;
-	left: 0;
-	transform-origin: top;
-	transform: scaleY(0);
-	transition: transform 0.25s ease-in-out;
-	z-index: -1;
-}
-.btn:hover::before, .btn:focus::before {
-	transform: scaleY(200%);
-	transform-origin: bottom;
-	border-radius: 50% 50% 0 0;
 }
 
 main {
@@ -146,7 +111,7 @@ main {
 #developer img {
 	width: 100px;
 	margin: 1em 0 1em 1em;
-	border: 3px solid hsl(235, 90%,70%);
+	border: 3px solid hsl(335, 68%, 45%);
 	border-radius: 50%;
 	transition: border-left 0.1s, border-top-right-radius 0.25s, border-bottom-right-radius 0.25s;
 }
@@ -187,7 +152,7 @@ main {
 	padding: 0.1em 0.3em;
 	border-radius: 0.2em;
 	color: hsl(0, 0%, 100%);
-	background-color: hsla(235,  90%, 70%);
+	background-color: hsl(10, 82%, 64%);
 	transition: box-shadow 0.25s, transform 0.25s;
 }
 .lang:hover {
@@ -209,14 +174,19 @@ main {
 	box-shadow: 0 0.5em 0.5em -0.4em hsla(0, 0%, 0%, .2);
 	transition: background-color 0.25s, boxshadow 0.25s, transform 0.25s;
 }
-#notes article:hover {
-	background-color: hsl(0, 0%, 98%);
-	transform: translateY(-0.5em);
-}
 #notes h2 {
 	font-size: 1.5em;
 	padding: 0.2em 0;
 	border-bottom: 1px solid hsla(0, 0%, 0%, .1);
+}
+.tag {
+	border-bottom: 0.3em solid hsl(45, 50%, 50%);
+	border-radius: 0.5em;
+	padding: 0.5rem 1rem;
+	font-size: 0.8rem;
+	background-color: hsl(45, 90%, 70%);
+	color: hsl(45, 90%, 30%);
+	box-shadow: 0 0.5em 0.5em -0.4em hsla(0, 0%, 0%, .5);
 }
 #notes h3 {
 	margin: 0;
@@ -227,24 +197,19 @@ main {
 	padding-right: 0.2em;
 	background-size: 400%;
 	background-image: linear-gradient(
-		90deg,
-		hsl(0, 90%, 70%),
-		hsl(45, 90%, 70%),
-		hsl(90, 90%, 70%),
-		hsl(135, 90%, 70%),
-		hsl(180, 90%, 70%),
-		hsl(225, 90%, 70%),
-		hsl(270, 90%, 70%),
-		hsl(315, 90%, 70%),
-		hsl(360, 90%, 70%),
-		hsl(315, 90%, 70%),
-		hsl(270, 90%, 70%),
-		hsl(225, 90%, 70%),
-		hsl(180, 90%, 70%),
-		hsl(135, 90%, 70%),
-		hsl(90, 90%, 70%),
-		hsl(45, 90%, 70%),
-		hsl(0, 90%, 70%)
+		145deg,
+		hsl(10, 82%, 64%),
+		hsl(5, 78%, 61%),
+		hsl(1, 77%, 58%),
+		hsl(335, 74%, 56%),
+		hsl(351, 73%, 53%),
+		hsl(345, 71%, 51%),
+		hsl(340, 70%, 48%),
+		hsl(335, 68%, 45%),
+		hsl(331, 66%, 43%),
+		hsl(315, 61%, 35%),
+		hsl(311, 59%, 32%),
+		hsl(306, 57%, 30%)
 	);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
@@ -252,21 +217,19 @@ main {
 	font-size: 1.2em;
 }
 .example {
+	position: relative;
 	margin-top: 1em;
+	border-bottom: 5px solid hsl(335, 68%, 45%);
 	border-radius: 0.5em;
 	padding: 0.5em 0;
-	background-color: hsl(235, 90%, 70%);
+	background-image: linear-gradient(145deg, hsl(10, 82%, 64%) 55%, hsl(335, 68%, 45%));
 	color: hsl(0, 0%, 100%);
+	line-height: 1.5em;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: flex-start;
 	align-items: flex-start;
 	align-content: center;
-	transition: background-color 0.25s ease-in-out, transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
-}
-.example:hover {
-	background-color: hsl(235, 90%, 71%);
-	transform: translateY(-0.5em);
 	box-shadow: 0 0.5em 0.5em -0.4em hsla(0, 0%, 0%, .5);
 }
 .example div:first-of-type {
@@ -275,28 +238,33 @@ main {
 .example div:nth-of-type(2) {
 	padding-right: 5em;
 }
-.example table {
-	margin: 0 1em;
-	padding: 0.5em;
-	border: 1px solid;
-	border-radius: 0.5em;
+.example div:nth-of-type(3) {
+	padding-right: 5em;
 }
-.example thead, .example tbody {
-	padding: 0.5em;
-	text-align: center;
+.example::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(180deg, hsla(0, 100%, 100%, 0), hsla(0, 100%, 100%, .1) 30%, hsla(0, 100%, 100%, 0));
+	top: 0;
+	left: 0;
 }
-.example th {
-	padding-bottom: 0.5em;
-	font-size: 1.2em;
-	text-decoration: 1px underline;
+.example::after {
+	content: "";
+	position: absolute;
+	width: 99%;
+	height: 50%;
+	border: 2px solid hsl(0, 82%, 74%);
+	border-width: 0 0 1px 0;
+	border-bottom-right-radius: 0.5em;
+	background-color: transparent;
+	bottom: 0;
+	right: 0;
+	filter: blur(-0.1em);
 }
-.example tbody tr:first-of-type {
-	background-color: hsl(0, 0%, 100%);
-	color: hsl(235, 90%, 70%);
-	font-weight: 700;
-}
-.example tbody td {
-	border-radius: 0.5em;
+.example li {
+	list-style-type: square;
 }
 
 #notes p {
@@ -309,12 +277,16 @@ main {
 }
 
 .highlight {
-	color: hsl(235, 90%, 70%);
-	font-weight: 700;
+	border-radius: 0.2em;
+	padding: 0 0.2em;
+	background-color: hsla(10, 82%, 64%, .5);
+	color: hsl(0, 0%, 0%);
 }
 
 .important {
-	color: hsl(0, 90%, 70%);
+	border-radius: 0.2em;
+	padding: 0 0.2em;
+	color: hsl(306, 57%, 20%);
 	font-weight: 700;
 }
 
