--- a/html&css/docStyles.css
+++ b/html&css/docStyles.css
@@ -277,10 +277,12 @@ main {
 }
 
 .highlight {
+	border: 1px solid hsla(0, 0%, 0%, .2);
 	border-radius: 0.2em;
 	padding: 0 0.2em;
-	background-color: hsla(10, 82%, 64%, .5);
+	background-color: hsla(0, 0%, 100%, .6);
 	color: hsl(0, 0%, 0%);
+	font-weight: 700;
 }
 
 .important {
