Few things done, however finish section 21
In the .css added a header h2 selector
in section 21, finish section
in .js practise some functions and while loops

--- a/html&css/docStyles.css
+++ b/html&css/docStyles.css
@@ -64,10 +64,11 @@ header h1 {
 		background-position: 0%;
 	}
 }
-header nav {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+header h2 {
+	margin: 0;
+	font-size: 1.2em;
+	font-weight: 400;
+	text-transform: capitalize;
 }
 
 main {
