--- a/html&css/docStyles.css
+++ b/html&css/docStyles.css
@@ -293,6 +293,28 @@ main {
 	font-weight: 700;
 }
 
+sup {
+	color:hsla(0, 100%, 100%, 1);
+	font-weight: 400;
+	padding: 0 0.5em;
+	border: 1px solid;
+	border-radius: 0.3em;
+}
+.sup2 {
+	color:hsla(0, 0%, 0%, 1);
+	font-weight: 400;
+	padding: 0 0.5em;
+	border: 1px solid;
+	border-radius: 0.3em;
+}
+sub {
+	color:hsla(0, 100%, 100%, 1);
+	font-weight: 400;
+	padding: 0 0.5em;
+	border: 1px solid;
+	border-radius: 0.3em;
+}
+
 @media (max-width: 1199.98px) {
 	header h1 {
 		font-size: 2em;
