--- a/html&css/docStyles.css
+++ b/html&css/docStyles.css
@@ -600,6 +600,70 @@ sub {
 
 /* End of Grocery List */
 
+/* ToDo List */
+
+#todoApp {
+	padding: 1em;
+	border: 1px solid hsla(0, 0%, 0%, .2);
+	border-radius: 0.2em;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#todoApp ul {
+	margin: 0.5em auto;
+	width: 90%;
+	padding: 1em;
+	border: 1px solid hsla(0, 0%, 0%, .2);
+	border-radius: 0.2em;
+	font-size: 1.2em;
+	list-style-type: none;
+}
+
+#todoApp li {
+	margin: 0.2em auto;
+	padding: 0.25em 0.5em;
+	border: 1px solid hsla(0, 0%, 0%, .2);
+	border-width: 0 0 1px 0;
+	border-radius: 0.2em;
+	background-color: hsla(0, 0%, 0%, .1);
+	transition: background-color 0.25s ease-in-out, transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+}
+#todoApp li:hover {
+	background-color: hsla(240, 90%, 80%, 1);
+	transform: translateY(-0.2em);
+	box-shadow: 0 0.5em 0.5em -0.5em;
+
+}
+
+#todoInput {
+	background: none;
+	border: 1px solid hsla(0, 0%, 0%, .2);
+	border-radius: 0.2em;
+	padding: 0.5em;
+	font-size: 1.2em;
+}
+#todoInput:focus {
+	border-color: hsla(240, 90%, 80%, 1);
+}
+#todoBtn {
+	padding: 0.5em;
+	border: 1px solid hsla(0, 0%, 0%, .2);
+	border-radius: 0.2em;
+	background: none;
+	font-size: 1.2em;
+	transition: background-color 0.25s ease-in-out, transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+}
+#todoBtn:hover {
+	background-color: hsla(240, 90%, 80%, 1);
+	transform: translateY(-0.1em);
+	box-shadow: 0 0.5em 0.5em -0.5em;
+}
+
+/* End of ToDo List */
+
 /* Live InPut Text */
 
 #liveUpdateExample {
