--- a/html&css/docStyles.css
+++ b/html&css/docStyles.css
@@ -680,8 +680,9 @@ sub {
 	font-size: 5em;
 }
 #liveInput {
-	text-align: center;
+	background: none;
 	padding: 0.5em 1em;
+	border-radius: 0.2em;
 	font-size: 2em;
 }
 
