--- a/html&css/webdev-Colt/projectsFolder/50DayProject/day1/style.css
+++ b/html&css/webdev-Colt/projectsFolder/50DayProject/day1/style.css
@@ -41,8 +41,14 @@ body {
     overflow: hidden;
 }
 .panels:hover::before{
-    
-    background-color: hsla(0, 0%, 20%, 1);
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: hsla(0, 0%, 0%, .3);
+}
+.panels.active:hover::before{
+    opacity: 0;
 }
 .panels.active {
     flex: 5;
@@ -54,7 +60,7 @@ body {
     left: 2%;
     font-size: 1em;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out 0.3s;
+    transition: opacity 0.3s ease-in-out 0.4s;
     z-index: 1;
 }
 .panels.active h2{
